--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@chartisan/chartjs": "^2.1.0",
-        "chart.js": "^2.9.3"
+        "chart.js": "^2.9.3",
+        "jquery": "^3.6.0"
     }
 }
